<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:background="#D2FF8922">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginHorizontal="10dp"
        android:layout_marginVertical="10dp"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="40dp"
            android:layout_marginTop="40dp"
            android:fontFamily="sans-serif-black"
            android:gravity="center"
            android:text="¡Pizzeria vitoLugini!"
            android:textAlignment="center"
            android:textColor="@color/black"
            android:textSize="35dp" />

        <ImageView
            android:id="@+id/logo"
            android:layout_width="350dp"
            android:layout_height="200dp"
            android:layout_centerVertical="true"
            android:layout_marginLeft="30dp"
            android:src="@drawable/pizzainicio" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:fontFamily="sans-serif-black"
            android:text="Usuario"
            android:textColor="@color/black"
            android:textSize="15dp" />

        <EditText
            android:id="@+id/editusuario"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/user"
            android:inputType="text"
            android:textSize="15dp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:fontFamily="sans-serif-black"
            android:text="Password"
            android:textColor="@color/black"
            android:textSize="15dp" />

        <EditText
            android:id="@+id/editpassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/password"
            android:inputType="text"
            android:textSize="15dp" />

        <Button
            android:id="@+id/boton1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="240dp"
            android:layout_marginTop="20dp"
            android:text="@string/inicio"
            android:textColor="#FFFFFF" />


    </LinearLayout>

</RelativeLayout>