<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".pagina3"
    android:background="#D2FF8922"
    >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginHorizontal="10dp"
        android:layout_marginVertical="10dp"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="100dp"
            android:layout_marginTop="30dp"
            android:fontFamily="sans-serif-black"
            android:text="Tipos de bebidas"
            android:textColor="#000000"
            android:textSize="20dp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="100dp"
            android:layout_marginTop="30dp"
            android:fontFamily="sans-serif-black"
            android:text="pepsi $20"
            android:textColor="#FDD60A"
            android:textSize="20dp" />
        <ImageView
            android:id="@+id/logo7"
            android:layout_width="130dp"
            android:layout_height="70dp"
            android:layout_centerVertical="true"
            android:layout_marginLeft="130dp"
            android:layout_marginTop="0dp"
            android:src="@drawable/psii"
            />

        <CheckBox
            android:id="@+id/pepsi1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:checked="false"
            android:minHeight="35dp"
            android:text="@string/pepsi1" />


        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="100dp"
            android:layout_marginTop="30dp"
            android:fontFamily="sans-serif-black"
            android:text="Fanta $15"
            android:textColor="#FDD60A"
            android:textSize="20dp" />
        <ImageView
            android:id="@+id/logo8"
            android:layout_width="130dp"
            android:layout_height="70dp"
            android:layout_centerVertical="true"
            android:layout_marginLeft="130dp"
            android:layout_marginTop="0dp"
            android:src="@drawable/fan"
            />

        <CheckBox
            android:id="@+id/fanta1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:checked="false"
            android:minHeight="35dp"
            android:text="@string/fanta1" />


        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="100dp"
            android:layout_marginTop="30dp"
            android:fontFamily="sans-serif-black"
            android:text="Coca cola $25"
            android:textColor="#FDD60A"
            android:textSize="20dp" />
        <ImageView
            android:id="@+id/logo9"
            android:layout_width="130dp"
            android:layout_height="70dp"
            android:layout_centerVertical="true"
            android:layout_marginLeft="130dp"
            android:layout_marginTop="0dp"
            android:src="@drawable/coca"
            />
        <CheckBox
            android:id="@+id/coca1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:checked="false"
            android:minHeight="35dp"
            android:text="@string/coca1" />

        <Button
            android:id="@+id/boton4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:text="@string/finalizarpedido"
            android:textColor="#FFFFFF" />



    </LinearLayout>

</RelativeLayout>